# sushi

./: Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
sushi/: cli.py  main.py  settings.py
